<resources>
    <string name="app_name" translatable="false">Lugares</string>
    <string name="default_web_client_idr" translatable="false">718874327365-ialpta9v6rj9kg8ejhpaeivg8bhgds7u.apps.googleusercontent.com</string>
    <string name="tv_correo">Correo</string>
    <string name="tv_clave">Contraseña</string>
    <string name="msg_fallo_registro">Error registrando usuario</string>
    <string name="msg_fallo_login">Error autenticando usuario</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_lugar">Lugares</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="msg_nombre">Nombre del lugar</string>
    <string name="msg_correo">Correo (abc@abc.com)</string>
    <string name="msg_telefono">Teléfono (9999–99999)</string>
    <string name="msg_web">Sitio Web</string>
    <string name="bt_agregar">Agregar Lugar</string>
    <string name="bt_actualizar">Actualizar Lugar</string>
    <string name="lugarAdded">Lugar agregado</string>
    <string name="noData">Faltan datos</string>
    <string name="delete">Eliminar Lugar</string>
    <string name="seguroBorrar">¿Seguro que desea eliminar</string>
    <string name="si">si</string>
    <string name="no">no</string>

    <string name="msg_enviar_correo">Enviar correo electrónico</string>
    <string name="msg_phone_call">Realizar llamada telefónica</string>
    <string name="msg_whatsapp_send">Enviar mensaje WhatsApp</string>
    <string name="msg_web_view">Abrir sitio Web</string>
    <string name="msg_map_view">Ver lugar en mapa</string>
    <string name="tv_latitud_lb">Latitud</string>
    <string name="tv_longitud_lb">Longitud</string>
    <string name="tv_altura_lb">Altura</string>
    <string name="msg_saludos">Saludos amigos</string>
    <string name="msg_mensaje_correo">Le escribo este correo para</string>
    <string name="msg_datos">Faltan datos</string>
    <string name="error">Error</string>

    <string name="msgEscucharAudio">Escuchar nota de audio</string>
    <string name="msg_imagen">Imagen del lugar</string>
    <string name="graba_pausa">Graba o pausa grabación</string>
    <string name="escuchaPlay">Escucha grabación</string>
    <string name="delete_nota">Borra nota de audio</string>
    <string name="play_nota">Escuchar nota de audio</string>
    <string name="rec_stop_nota">Graba o detiene nota de audio</string>
    <string name="take_photo">Toma foto</string>
    <string name="rotate_l">Rota izquierda</string>
    <string name="rotale_r">Rota a la derecha</string>
    <string name="msg_graba_audio">Grabando nota de audio</string>
    <string name="msg_detener_audio">Nota de audio detenida</string>
    <string name="msg_subiendo_audio">Subiendo Nota Audio</string>
    <string name="msg_subiendo_imagen">Subiendo imagen</string>
    <string name="msg_ver_mapa">Ver la ubicacion</string>
    <string name="tv_latitud1">Latitud</string>
    <string name="tv_longitud1">Longitud</string>
    <string name="tv_altura1">Altura</string>
    <string name="todo">Por definir</string>
</resources>