<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.lugar.AddLugarFragment">
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            <EditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/msg_nombre"
                android:inputType="textPersonName" />
            <EditText
                android:id="@+id/etCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/msg_correo"
                android:inputType="textEmailAddress" />
            <EditText
                android:id="@+id/etTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/msg_telefono"
                android:inputType="phone" />
            <EditText
                android:id="@+id/etWeb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/msg_web"
                android:inputType="textPersonName" />
            <Button
                android:id="@+id/bt_agregar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bt_agregar" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="25sp"
                android:padding="10sp"
                android:stretchColumns="*">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/tv_latitud1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center|center_horizontal|center_vertical"
                        android:text="@string/tv_latitud_lb"
                        android:textSize="22sp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/tv_longitud1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center|center_horizontal|center_vertical"
                        android:text="@string/tv_longitud_lb"
                        android:textSize="22sp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/tv_altura1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center|center_horizontal|center_vertical"
                        android:text="@string/tv_altura_lb"
                        android:textSize="22sp"
                        android:textStyle="bold" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/tv_latitud"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center|center_horizontal|center_vertical"
                        android:textSize="18sp" />
                    <TextView
                        android:id="@+id/tv_longitud"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center|center_horizontal|center_vertical"
                        android:textSize="18sp" />
                    <TextView
                        android:id="@+id/tv_altura"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center|center_horizontal|center_vertical"
                        android:textSize="18sp" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>